--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,6 +25,9 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.0",
+    "@heroicons/react": "^1.0.4",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
     "preact": "^10.5.14",
     "preact-router": "^3.2.1"
   }
