--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/lodash": "^4.14.172",
     "autoprefixer": "^10.3.1",
     "css-loader": "^6.2.0",
     "postcss": "^8.3.6",
@@ -28,6 +29,7 @@
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.4",
     "@tailwindcss/aspect-ratio": "^0.2.1",
+    "lodash": "^4.17.21",
     "preact": "^10.5.14",
     "preact-router": "^3.2.1"
   }
