--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "outDir": "./dist/",
     "sourceMap": true,
+    "strict": true,
     "noImplicitAny": true,
     "module": "commonjs",
     "target": "es5",
@@ -17,6 +18,11 @@
       ]
     }
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts"
+  ]
 }
