started signup flow

--- a/backend/infrastructure/requirements.txt
+++ b/backend/infrastructure/requirements.txt
@@ -1,4 +1,5 @@
 chalice[cdk]
+aws_cdk.aws_secretsmanager>=1.85.0,<2.0
 aws_cdk.core>=1.85.0,<2.0
 aws_cdk.aws_dynamodb>=1.85.0,<2.0
 aws_cdk.aws_cognito>=1.85.0,<2.0
