--- a/front-end/package.json
+++ b/front-end/package.json
@@ -29,6 +29,7 @@
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.4",
     "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@tailwindcss/forms": "^0.3.3",
     "lodash": "^4.17.21",
     "preact": "^10.5.14",
     "preact-router": "^3.2.1"
