--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -10,6 +10,7 @@
     "moduleResolution": "node",
     "jsx": "react-jsx",
     "jsxImportSource": "preact",
+    "noEmit": true,
     "skipLibCheck": true,
     "baseUrl": "src",
     "paths": {
