--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,14 +11,19 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@auth0/auth0-react": "^1.6.0",
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
     "@types/lodash": "^4.14.172",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
     "autoprefixer": "^10.3.1",
     "babel-loader": "^8.0.6",
     "css-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
     "prettier": "^2.3.2",
@@ -36,11 +41,11 @@
     "@heroicons/react": "^1.0.4",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/forms": "^0.3.3",
-    "amazon-cognito-identity-js": "^5.1.0",
-    "aws-amplify": "^4.2.5",
     "lodash": "^4.17.21",
-    "preact": "^10.5.14",
-    "preact-router": "^3.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.1",
     "swr": "^1.0.0"
   }
 }
